--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ $('#return-to-top').click(function() {      // When arrow is clicked
       <div class="jumbotron jumbotron-fluid">
         <div class="container animated jackInTheBox">
           <p class="lead">
-            <i class="fas fa-quote-left"></i> I am a native of Buenos Aires,
+            <i class="fas fa-quote-left text-center"></i> I am a native of Buenos Aires,
             Argentina. although also an Italian citizen, my interest in
             computers was born as a child, dismantling and repairing every
             computer that crossed my hands, there I discovered that with enough
@@ -92,6 +92,7 @@ $('#return-to-top').click(function() {      // When arrow is clicked
       </div>
     </div>
     <a href="javascript:" id="return-to-top"><i class="icon-chevron-up"></i></a>
+
     <div class="text-center aboutus">
       <div class="separate"></div>
       <h3 id="Skills">Skills</h3>
@@ -362,24 +363,25 @@ $('#return-to-top').click(function() {      // When arrow is clicked
     <div class="row">
       <div class="col-md-1 text-center"></div>
       <div class="col-md-2 text-center">
-        <a href="https://twitter.com/PoleselF"><img src="./images/iconfinder_03-twitter_104501.png" alt="" class="skill-logo" /></a>
+        <a href="https://twitter.com/PoleselF"><img src="./images/icons8-twitter-500.png" alt="" class="skill-logo" /></a>
       </div>
       <div class="col-md-2 text-center">
-        <a href="https://github.com/poleselfg"><img src="./images/iconfinder_github_1220369.png" alt="" class="skill-logo" /></a>
+        <a href="https://github.com/poleselfg"><img src="./images/icons8-github-2-500.png" alt="" class="skill-logo" /></a>
       </div>
       <div class="col-md-2 text-center">
-        <a href="mailto:poleself@gmail.com"><img src="./images/iconfinder_mail-24_103176.png" alt="" class="skill-logo" /></a>
+        <a href="mailto:poleself@gmail.com"><img src="./images/icons8-correo-electrónico-100.png" alt="" class="skill-logo" /></a>
       </div>
       <div class="col-md-2 text-center">
-        <a href="https://www.linkedin.com/in/federico-polesel-720631186/"> <img src="./images/iconfinder_social-linkedin_216394.png" alt="" class="skill-logo" /></a>
+        <a href="https://www.linkedin.com/in/federico-polesel-720631186/"> <img src="./images/icons8-linkedin-500.png" alt="" class="skill-logo" /></a>
       </div>
       <div class="col-md-2  text-center">
-        <a href="https://wa.me/5491161481923"><img src="./images/iconfinder_Whatsapp_104801.png" alt="" class="skill-logo" /></a>
+        <a href="https://wa.me/5491161481923"><img src="./images/icons8-whatsapp-500.png" alt="" class="skill-logo" /></a>
       </div>
       <div class="col-md-1 text-center"></div>
     </div>
     <div class="separate"></div>
     <div class="separate"></div>
+ >
     <p class="text-center">Developed by Pole</p>
   </body>
 </html>
