--- a/Home.html
+++ b/Home.html
@@ -55,7 +55,7 @@
             <i class="fas fa-quote-left"></i> I am a native of Buenos Aires,
             Argentina. although also an Italian citizen, my interest in
             computers was born as a child, dismantling and repairing every
-            computer that crossed my hands, there I discovered that with enough
+            computer that crossed my hands, the same thing with security and pentesting, there I discovered that with enough
             dedication and perseverance could learn anything that I wanted,
             during the following years I was always dedicated to computer
             science, electronics, networks and computer security, which gives me
@@ -296,11 +296,17 @@
     <div class="separate"></div>
     <div class="container-fluid">
       <ol class="list ">
+        li class="item">
+          <h2 class="headline">FullStack development path codeacademy</h2>
+          <span
+            >Html, Css, Javascript, advanced Css, advanced JS, React, Node, Git, Comand Line, Node JS, Sql and databases for the web, Building persistent APIS, Test Driven Development</span
+          >
+        </li>
         <li class="item">
           <h2 class="headline">Web development with PHP y MySQL</h2>
           <span
             >Universidad Tecnológica Nacional Facultad Regional Resistencia
-            Chaco - UTN FRRe (IN COURSE)</span
+            Chaco - UTN FRRe</span
           >
         </li>
         <li class="item ">
